--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,15 @@
   "compilerOptions": {
     "module": "commonjs",
     "allowJs": true,
-    "outDir": "src",
+    "outDir": "src/js",
     "target": "es5",
     "noImplicitAny": false,
     "sourceMap": false,
-    "noUnusedLocals": true,
     "allowUnreachableCode": false,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
-    "lib": ["es2015"]
+    "lib": ["es2015", "es2016", "dom"]
   },
   "include": ["./src/index.ts"],
   "exclude": [""]
