--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "doulaCoop",
+  "name": "doula-coop",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Mark Goho",
@@ -16,6 +16,8 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
+    "imagemin": "^5.3.1",
+    "imagemin-webp": "^4.0.0",
     "pug": "^2.0.0-rc.2",
     "pump": "^1.0.2",
     "typescript": "^2.4.1",
