--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Mark Goho",
   "license": "MIT",
   "devDependencies": {
-    "@types/jquery": "^3.2.9",
     "browser-sync": "^2.18.12",
+    "critical": "^0.9.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
