--- a/functions/package.json
+++ b/functions/package.json
@@ -2,6 +2,7 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
+    "express": "^4.15.3",
     "firebase-admin": "^5.0.0",
     "firebase-functions": "^0.6.0"
   },
