--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-uglify": "^3.0.0",
     "imagemin": "^5.3.1",
     "imagemin-webp": "^4.0.0",
+    "pug": "^2.0.0-rc.4",
     "pump": "^1.0.2",
     "typescript": "^2.4.1",
     "workbox-build": "^1.1.0"
