fix typo in header control

--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,7 @@
     "public": "dist",
     "headers": [
       {
-        "source": "**/*.@(eot|otf|ttf|ttc|woff|woff2|font.css)",
+        "source": "**/*.@(eot|otf|ttf|ttc|woff|woff2|font|css)",
         "headers": [
           {
             "key": "Cache-Control",
