Require successful build

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "gulp deploy && gulp bundle-sw && gulp critical && firebase serve",
     "deploy": "gulp deploy && gulp bundle-sw && gulp critical && firebase deploy",
     "tools": "npm i -g yarn firebase-tools",
-    "test": "echo 'No one here but us chickens!!'"
+    "test": "npm run build"
   },
   "main": "index.js",
   "author": "Mark Goho",
