--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,17 +8,17 @@ jobs:
       - checkout
       - run: yarn install && yarn build
     persist_to_workspace:
-      root: .
+      root: "."
       paths:
-        - dist/
-        - .firebaserc
-        - firebase.json
+        - "dist/"
+        - ".firebaserc"
+        - "firebase.json"
   deploy:
     machine:
       enabled: true
     working_directory: ~/environment
     - attach_workspace:
-        at: .
+        at: "."
     steps:
       - checkout
       - run: ls dist/
