--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,20 +7,19 @@ jobs:
     steps:
       - checkout
       - run: yarn install && yarn build
-    # persist_to_workspace:
-    #   root: "."
-    #   paths:
-    #     - "dist/"
-    #     - ".firebaserc"
-    #     - "firebase.json"
+      - persist_to_workspace:
+          root: "."
+          paths:
+            - "dist/"
+            - ".firebaserc"
+            - "firebase.json"
   deploy:
     machine:
       enabled: true
     working_directory: ~/environment
-    # - attach_workspace:
-    #     at: "."
     steps:
-      - checkout
+      - attach_workspace:
+          at: "."
       - run: ls dist/
       - run: ls -la
 
