--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,8 @@ jobs:
             - firebase.json
             - functions/
   deploy:
-    machine:
-      enabled: true
+    docker:
+      - image: circleci/node:9
     working_directory: ~/environment
     steps:
       - attach_workspace:
