--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,9 @@ jobs:
             - .firebaserc
             - firebase.json
             - functions/
+            - node_modules/
+            - package.json
+            - yarn.lock
   deploy:
     docker:
       - image: circleci/node:9
@@ -21,9 +24,9 @@ jobs:
     steps:
       - attach_workspace:
           at: "."
-      - run: yarn global add firebase-tools
+      - run: yarn add firebase-tools
       - run: ls -la
-      - run: firebase deploy --token=$FIREBASE_TOKEN
+      - run: ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN
 
 workflows:
   version: 2
