Restrict to publishing from development branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,6 @@ workflows:
       - deploy:
           requires:
             - build
-          # filters:
-          #   branches:
-          #     only: sequential-branch-filter
+          filters:
+            branches:
+              only: development
