Write mez artifacts to build/ instead of back to src

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "gulp deploy && gulp bundle-sw && gulp critical",
     "serve": "gulp deploy && gulp bundle-sw && gulp critical && firebase serve",
     "deploy": "gulp deploy && gulp bundle-sw && gulp critical && firebase deploy",
-    "tools": "npm i -g yarn firebase-tools",
+    "tools": "npm i -g yarn firebase-tools gulp",
     "test": "npm run build"
   },
   "main": "src/index.js",
