--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^2.18.12",
+    "browser-sync-spa": "^1.0.3",
     "critical": "^0.9.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
